buttons fixed by js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div id="container">
     <h1>Pendulum</h1>
-    <div id="pendulum" class="">
+    <div id="pendulum" class="animate">
         <div id="top"></div>
         <div id="bottom"></div>
     </div>
