--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
 <div id="container">
     <h1>Pendulum</h1>
     <div id="pendulum" class="animate">
-        <div id="top"></div>
-        <div id="bottom"></div>
+        <div id="top">
+            <div id="puck">
+                <div id="smallpuck"></div>
+            </div>
+        </div>
+        <div id="bottom">
+            <div class="juncture"></div>
+            <div class="juncture"></div>
+        </div>
     </div>
     <button onclick="startR()">Start</button>
     <button onclick="stopR()">Stop</button>
