--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <div id="container">
     <h1>Pendulum</h1>
+    <div id="surface"></div>
     <div id="pendulum" class="animate">
         <div id="top">
             <div id="puck">
